# Feature_Flags

./: .gitignore  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  docker-compose.yml  prometheus.yml  prompt.md  suite_test.md
.github/: gsd-file-manifest.json
.github/workflows/: test.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/09-gap-closure/: 09-01-PLAN.md  09-01-SUMMARY.md
feature-flags/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
feature-flags/docs/adr/: 001-why-not-launchdarkly.md  002-eventual-consistency-tradeoff.md  003-deterministic-hashing.md
feature-flags/migrations/: __init__.py  env.py
feature-flags/migrations/versions/: 001_initial_schema.py
feature-flags/sdk/: pyproject.toml
feature-flags/sdk/feature_flags_sdk/: __init__.py  cache.py  client.py  models.py
feature-flags/src/: config.py  main.py
feature-flags/src/api/: deps.py
feature-flags/src/api/v1/: __init__.py  environments.py  evaluation.py  flags.py  webhooks.py
feature-flags/src/core/: cache.py  evaluation.py  hashing.py  targeting.py
feature-flags/src/infra/: __init__.py  database.py  metrics.py  redis.py
feature-flags/src/models/: audit.py  environment.py  flag.py  webhook.py
feature-flags/src/schemas/: evaluation.py  flag.py
feature-flags/src/scripts/: seed.py
feature-flags/tests/: conftest.py  factories.py
feature-flags/tests/consistency/: test_concurrent_evaluation.py
feature-flags/tests/performance/: locustfile.py  test_evaluation_latency.py
feature-flags/tests/security/: test_authn_authz.py  test_injection.py  test_input_validation.py  test_rate_limiting.py  test_sensitive_data.py
feature-flags/tests/unit/core/: test_evaluation.py  test_hashing.py
feature-flags/tests/utils/: assertions.py  attack_payloads.py
