[project]
name = "feature-flags"
version = "1.0.0"
description = "Feature Flags Platform — production-grade, async, < 1ms evaluation"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[asyncio]>=5.0.0",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Hashing (rollout determinístico)
    "mmh3>=4.1.0",
    # Metrics
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # HTTP client (webhook dispatch)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "testcontainers[postgres,redis]>=4.7.0",
    "hypothesis>=6.100.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "freezegun>=1.5.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.2.0",
    "pip-audit>=2.7.0",
]
performance = [
    "locust>=2.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "security: testes de segurança",
    "performance: testes de latência (requerem ambiente controlado)",
    "consistency: testes de concorrência",
]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "S", "B", "C4"]
ignore = ["S101", "S105"]  # assert and hardcoded password in tests allowed

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]
