[project]
name = "feature-flags-sdk"
version = "1.0.0"
description = "Cliente Python para a Feature Flags Platform"
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",  # mock para httpx
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feature_flags_sdk"]
